--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'maven-publish'
 }
 
 task clean(type: Delete) {
